<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mexen</string>
    <string name="settings">Instellingen</string>
    <string name="general">Algemeen</string>
    <string name="roll_activity_name">%d Dobbels</string>
    <string name="mexen_2_dice">2 Dobbels</string>
    <string name="mexen_3_dice">3 Dobbels</string>
    <string name="action_settings">Settings</string>
    <string name="throw_dice">Gooi!</string>
    <string name="die">Dobbelsteen</string>
    <string name="throw_chance">Kans om dit te gooien</string>
    <string name="throw_higher_chance">Kans om hoger te gooien</string>
    <string name="chance_default">0%</string>
    <string name="gray_overlay">grijze bovenlaag</string>
    <string name="choose_dice">Kies het aantal dobbelstenen dat je wilt gebruiken</string>
    <string name="game_mode">Spelmodus</string>
    <string name="game_free">Vrij gooien</string>
    <string name="game_player">Speler modus</string>
    <string name="throw_one">Eerste gooi</string>
    <string name="throw_two">Tweede gooi</string>
    <string name="throw_three">Derde gooi</string>
    <string name="throw_again">Gooi opnieuw</string>
    <string name="share">Deel</string>
    <string name="share_string">Ik ben erg tevreden met de Mex Kansen app. Jij kan hem ook downloaden op https://play.google.com/store/apps/details?id=nl.vincentketelaars.mexen</string>
    <string name="description">beschrijving</string>
    <string name="pref_withhold_title">Laten liggen</string>
    <string name="pref_auto_withhold">Automatisch laten liggen</string>
    <string name="pref_auto_withhold_summary">Laat dobbelstenen automatisch liggen</string>
    <string name="pref_auto_withhold_number">Ogen laten liggen</string>
    <string name="pref_auto_withhold_number_summary">Hoogste aantal ogen te laten liggen</string>
    <string name="pref_auto_withhold_transcend">Volgende beurt laten liggen</string>
    <string name="pref_auto_withhold_transcend_summary">Sta het laten liggen van een dobbelsteen voor de volgende beurt toe</string>
    <string name="pref_shake_throw">Dobbelstenen gooien met beweging</string>
    <string name="pref_shake_throw_summary">Gooi de dobbelstenen wanneer het apparaat een versnelde beweging maakt</string>
    <string name="title_activity_generic">GenericActivity</string>
    <string name="stop_game">Wil je het spel beeindigen?</string>
    <string name="yes">Ja</string>
    <string name="no">Nee</string>

</resources>
