<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dice_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    
    <FrameLayout
        android:id="@+id/die_frame_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
            
        <ImageView
            android:id="@+id/die1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/dice"
            android:src="@drawable/d6" />
        
        <ImageView 
            android:id="@+id/die_overlay_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.4"
            android:visibility="invisible"
            android:src="@drawable/gray_shape" 
            android:contentDescription="@string/gray_overlay" />
              
    </FrameLayout>
        
	</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <FrameLayout
            android:id="@+id/die_frame_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
	        <ImageView
	            android:id="@+id/die2"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:contentDescription="@string/dice"
	            android:src="@drawable/d2" />
	        
	        <ImageView 
	            android:id="@+id/die_overlay_2"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:alpha="0.4"
	            android:visibility="invisible"
	            android:src="@drawable/gray_shape" 
	            android:contentDescription="@string/gray_overlay" />
              
        </FrameLayout>
        
        <FrameLayout
            android:id="@+id/die_frame_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

	        <ImageView
	            android:id="@+id/die3"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:contentDescription="@string/dice"
	            android:src="@drawable/d1" />
	        
	        <ImageView 
	            android:id="@+id/die_overlay_3"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:alpha="0.4"
	            android:visibility="invisible"
	            android:src="@drawable/gray_shape"
	            android:contentDescription="@string/gray_overlay" />
              
        </FrameLayout>

    </LinearLayout>

    <Button
        android:id="@+id/throw_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/throw_dice"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/throw_chance_textview"
            style="@style/default_text_style"
            android:layout_gravity="center_horizontal"
            android:text="@string/throw_chance" />
        
        <TextView
	        android:id="@+id/throw_chance_result_textview"
            style="@style/default_text_style"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/chance_default" />

	    <TextView
	        android:id="@+id/throw_higher_chance_textview"
            style="@style/default_text_style"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/throw_higher_chance" />
	    
	    <TextView
	        android:id="@+id/throw_higher_chance_result_textview"
            style="@style/default_text_style"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/chance_default" />

    </LinearLayout>

</LinearLayout>